--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.label :name %>
   <%= f.text_field  :name, required: true, autofocus: true %>
   <br />
-  <%= f.label :destination %>
-  <%= f.text_field  :destination, required: true, autofocus: true %>
+  <%= f.label :description %>
+  <%= f.text_field  :description, required: true, autofocus: true %>
   <%= f.submit %>
 <% end %>
