--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Lists#index</h1>
-<p>Find me in app/views/lists/index.html.erb</p>
+<h1>Index</h1>
+
+<%= link_to 'Create a new List item', new_list_path %>
+<ul>
+  <% @lists.each do |list| %>
+    <li>
+      <%= link_to list.name, lists_path(list) %>
+    </li>
+  <% end %>
+</ul>
