added very basic css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+
+/* Indents all paragraphs */
+h1 {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+p {
+  margin-left: 20px;
+}
