update list index, form, views

--- a/app/views/destinations/new.html.erb
+++ b/app/views/destinations/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Destinations#new</h1>
-<p>Find me in app/views/destinations/new.html.erb</p>
+
+<h1>New Destination</h1>
+<hr>
+<%= render 'form' %>
