--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,8 +1,10 @@
-<%= form_for @list do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field  :name, required: true, autofocus: true %>
-  <br />
-  <%= f.label :description %>
-  <%= f.text_field  :description, required: true, autofocus: true %>
-  <%= f.submit %>
-<% end %>
+<div>
+  <%= form_for @list do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field  :name, required: true, autofocus: true %>
+    <br />
+    <%= f.label :description %>
+    <%= f.text_field  :description, required: true %>
+    <%= f.submit %>
+  <% end %>
+</div>
