--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,6 +5,8 @@
   <% @lists.each do |list| %>
     <li>
       <%= link_to list.name, lists_path(list) %>
+      <%= link_to 'edit', edit_list_path(list) %>
+      <%= link_to 'delete', [list], method: :delete %>
     </li>
   <% end %>
 </ul>
