--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,12 +1,13 @@
-<h1>Index</h1>
+<h1>Bucket Lists:</h1>
 
-<%= link_to 'Create a new List item', new_list_path %>
+
+<%= link_to 'Create a new bucket list', new_list_path %>
 <ul>
   <% @lists.each do |list| %>
     <li>
       <%= link_to list.name, list_path(list) %>
-      <%= link_to 'edit', edit_list_path(list) %>
-      <%= link_to 'delete', [list], method: :delete %>
+      - [<%= link_to 'edit', edit_list_path(list) %>
+      <%= link_to 'delete', [list], method: :delete %>]
     </li>
   <% end %>
 </ul>
