--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -6,7 +6,9 @@
 <ul >
   <% @lists.each do |list| %>
     <li>
-      <%= link_to list.name, list_path(list) %>
+      <div class='list-name'>
+        <%= link_to list.name, list_path(list) %>
+      </div>
       <%= link_to 'edit', edit_list_path(list) %>
       <%= link_to 'delete', [list], method: :delete %>
     </li>
