--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -3,9 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .title {
-  text-align: center;
   color:blue; 
 }
 .list-name {
   font-variant-caps: small-caps;
+  font-size: 20px;
 }
