--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,11 +1,13 @@
-<h1>Bucket Lists:</h1>
+<h1 class='title'>Bucket Lists:</h1>
 
 
 <%= link_to 'Create a new bucket list', new_list_path %>
 <ul>
   <% @lists.each do |list| %>
     <li>
+      <div class='list-name'>
       <%= link_to list.name, list_path(list) %>
+      </div>
       - [<%= link_to 'edit', edit_list_path(list) %>
       <%= link_to 'delete', [list], method: :delete %>]
     </li>
