--- a/app/views/destinations/edit.html.erb
+++ b/app/views/destinations/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Destinations#edit</h1>
-<p>Find me in app/views/destinations/edit.html.erb</p>
+<h1>Edit Destination</h1>
+<hr>
+<%= render 'form' %>
