--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Destinations#index</h1>
-<p>Find me in app/views/destinations/index.html.erb</p>
+<h1 class='title'>Destinations for: 
+<%= @list.name %>
+<br>
+
+<%= link_to 'Create a new destination', new_list_destination_path(@list) %>
+<ul>
+  <% @destinations.each do |dest| %>
+    <li>
+      <div class='list-name'>
+      <%= dest.location %>
+      - [<%= link_to 'edit', edit_list_destination_path(@list, dest) %>
+      ]
+    
+    </li>
+  <% end %>
+</ul>
